@@ -61,6 +61,8 @@
 # 2012-09-08 ChPe added PCRE32 support
 # 2012-10-23 PH added support for VALGRIND and GCOV
 # 2012-12-08 PH added patch from Daniel Richard G to quash some MSVC warnings
+# 2013-07-01 PH realized that the "support" for GCOV was a total nonsense and
+#            so it has been removed.
 
 PROJECT(PCRE C CXX)
 
@@ -164,9 +166,6 @@ SET(PCRE_SUPPORT_BSR_ANYCRLF OFF CACHE BOOL
 
 SET(PCRE_SUPPORT_VALGRIND OFF CACHE BOOL
     "Enable Valgrind support.")
-
-SET(PCRE_SUPPORT_COVERAGE OFF CACHE BOOL
-    "Enable code coverage support using gcov.")
 
 OPTION(PCRE_SHOW_REPORT    "Show the final configuration report" ON)
 OPTION(PCRE_BUILD_PCREGREP "Build pcregrep" ON)
@@ -296,13 +295,6 @@ ENDIF(PCRE_SUPPORT_PCREGREP_JIT)
 IF(PCRE_SUPPORT_VALGRIND)
         SET(SUPPORT_VALGRIND 1)
 ENDIF(PCRE_SUPPORT_VALGRIND)
-
-IF(PCRE_SUPPORT_COVERAGE)
-        SET(SUPPORT_GCOV 1)
-        IF(NOT CMAKE_COMPILER_IS_GNUCC)
-            MESSAGE(FATAL_ERROR "Code coverage reports can only be generated when using GCC")
-        ENDIF(NOT CMAKE_COMPILER_IS_GNUCC)
-ENDIF(PCRE_SUPPORT_COVERAGE)
 
 # This next one used to contain
 #       SET(PCRETEST_LIBS ${READLINE_LIBRARY})
